--- a/firstpage.css
+++ b/firstpage.css
@@ -1,33 +1,34 @@
 
 body{
-    display: block;
-    margin: 0%;
     padding: 0%;
+    text-align: center;
+    margin: 0 auto;
 }
 
 #start{
     background-image: url("./images/background.png");
     background-position: center;
-    height: 90vh;
+    height: 88vh;
     width: 100vw;
     margin-top: 0%;
     background-repeat: no-repeat;
-    background-size:100vw;    
+    background-size: 75vw;    
 }
 .name{
     color: #fc8464;
-    font-size: 80px;
-    justify-content: flex-start;
+    font-size: 73px;
     font-family: fantasy;
     font-weight: bold;
-    padding: 4%;
-    float: right;
+    padding: 8%;
+    float: inherit;
+    margin-left: 38%;
+    margin-top: 0;
 }
 
 .how{
     display: flex;
     color:#140d08;
-    font-size: 25px;
+    font-size: 20px;
     justify-content: center;
     bottom: 8px; 
     margin-top: 15px;
@@ -36,12 +37,12 @@ body{
 .link{
     cursor: pointer;
     display: block;
-    font-size: 42px;    
+    font-size: 34px;    
     text-decoration: none;
     position: absolute;
     color: aliceblue;
-    bottom: 12%;
-    left: 48%;
+    bottom: 24%;
+    left: 47.6%;
 }
 
 .link:hover {
